Align options page upsells to right; fixes style issue in Lite version
See websharks/zencache.com#76

--- a/src/client-s/css/menu-pages/_heading.scss
+++ b/src/client-s/css/menu-pages/_heading.scss
@@ -14,7 +14,7 @@
   .plugin-menu-page-upsells {
     float:                    right;
     clear:                    right;
-    text-align:               center;
+    text-align:               right;
     max-width:                350px;
     margin:                   1em 0 0;
 
